--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@salaku/sm-crypto": "^0.1.5",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "jest": "^26.1.0"
   }
 }
